# rts

lab/02/newtasks/: CMakeLists.txt
lab/02/newtasks/src/: CMakeLists.txt  main.c
lab/02/tasks_and_queues/: CMakeLists.txt
lab/02/tasks_and_queues/src/: main.c
lab/03.1/idlehook/: CMakeLists.txt
lab/03.1/idlehook/src/: FreeRTOSConfig.h  main.c
lab/03/scheduling_and_priority/: CMakeLists.txt
lab/03/scheduling_and_priority/src/: main.c
lab/04/queues/: CMakeLists.txt
lab/04/queues/src/: main.c
lab/05/semaphores/: CMakeLists.txt
lab/05/semaphores/src/: CMakeLists.txt  main.c
lab/06/mutex/: CMakeLists.txt
lab/06/mutex/src/: CMakeLists.txt
lab/07/heap/: CMakeLists.txt
lab/07/heap/src/: CMakeLists.txt  FreeRTOSConfig.h  main.c
